# unstation-android

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: best-experience.md  build.py  going-live.md  help.md  index.md  watching.md
docs/assets/css/: docs.css
docs/assets/js/: docs.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: android-shims.js  android.css
