[package]
name = "unstation-android"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Unstation — decentralized P2P live streaming (Android)."

[lib]
name = "unstation_android_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tauri` here has NO macos-private-api (that's desktop-only). generate_context! +
# mobile_entry_point come from here.
tauri = { version = "2", features = [] }
# Direct dep (also in unstation-app, which calls its init()) so tauri_build here discovers the
# opener plugin's ACL permissions (opener:*). Plugin permission files propagate only to the app
# crate that runs the tauri_build build script, via Cargo's `links` DEP_ env — a transitive dep
# through unstation-app is NOT enough.
tauri-plugin-opener = "2"
# Same direct-dep rule for the deep-link plugin (registered in the shared unstation-app
# builder): needed here so tauri_build discovers its ACL permissions (deep-link:*).
# Inbound unstation://watch/<name> invite links arrive via the VIEW intent-filter in
# gen/android/.../AndroidManifest.xml and reach JS through window.__TAURI__.deepLink.
tauri-plugin-deep-link = "2"
# Shared command/event layer (the ~800-line handler set), reused verbatim from the desktop
# repo. `publish` is ON (M4): the Android start_publish uses a camera source (Camera2 +
# MediaCodec → FragmentBuilder), NOT ffmpeg — segmenter is linked only for its FragmentBuilder.
unstation-app = { path = "../../unstation-desktop/crates/unstation-app", features = ["publish"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# testnet-provisioning (transitively via unstation-app → useragent-chain) embeds Alice's
# dev key; the SDK forbids optimized release builds unless debug-assertions stays on. Keep
# it for LAN test APKs. BEFORE PUBLIC RELEASE: drop this AND the testnet-provisioning
# feature, then provision the allowance through real phone personhood.
# Strip DWARF debug info from BOTH profiles: statically linking the chain SDK +
# libdatachannel + OpenSSL yields a ~457 MB unstripped debug .so that won't fit the
# emulator. Stripping debuginfo (keeps debug-assertions — a compile flag, unaffected)
# cuts it to a fraction. `symbols` would be smaller still but keeps crash traces poorer.
[profile.dev]
strip = "debuginfo"

[profile.release]
debug-assertions = true
opt-level = 3
lto = "thin"
strip = "debuginfo"
